name:                redomulator
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/kasou-sk/redomulator#readme
license:             BSD3
license-file:        LICENSE
author:              Rastislav Kassak
maintainer:          kasou.sk@gmail.com
copyright:           2017 Rastislav Kassak
category:            HTML
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable redomulator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
